Renamed some functions. Refactored the CreateTable() function some more to make it more readable. Implemented function ReverseOrderOfFightsPerEvent() to sort the order of the fights. This made the old process of assigning ID's to the rows not possible as it was done before the rows were reversed but now a new function called AssignRowIDs() has been added to resolve that issue.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,16 +35,24 @@ tr{
     background: gray;
 }
 
-/*  */
+/* #FighterRowEven {
+    background: #DCDCDC;
+}
+
+
+#FighterRowOdd {   
+    background: #C0C0C0;   
+
+} */
+
 #row0, #row2, #row4, #row6, #row8, #row10, #row12, #row14, #row16, #row18, #row20, #row22 {    
     background: #C0C0C0;   
 }
 
-/* the rows start at 0 */
-/* ; */
+/* the rows start at 0  */
 #row1, #row3, #row5, #row7, #row9, #row11, #row13, #row15, #row17, #row19, #row21, #row23 {    
   
     
     background: #DCDCDC;
 
-}
+ } 
